src/objects/SSC_GdriveFileID__c.object
<CustomObject>
    <fields>
        <fullName>File_ID__c</fullName>
        <label>File ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generation_Date__c</fullName>
        <label>Generation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Template_Identifier__c</fullName>
        <label>Template Identifier</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Supplier GDrive File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>File_ID__c</columns>
        <columns>Generation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier GDrive Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>